--- a/bpmn/MSOInfrastructureBPMN/pom.xml
+++ b/bpmn/MSOInfrastructureBPMN/pom.xml
@@ -209,7 +209,7 @@
 			<!-- AssertJ Testing Library -->
 			<groupId>org.camunda.bpm.extension</groupId>
 			<artifactId>camunda-bpm-assert</artifactId>
-			<version>1.2</version>
+			<version>2.0-alpha2</version>
 			<scope>test</scope>
 		</dependency>
 		
@@ -366,6 +366,18 @@
 			<artifactId>libphonenumber</artifactId>
 			<version>8.9.1</version>
 		</dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>2.4.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-test</artifactId>
+      <version>1.4.2.RELEASE</version>
+      <scope>test</scope>
+    </dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
