--- a/common/pom.xml
+++ b/common/pom.xml
@@ -138,7 +138,7 @@
                 <dependency>
                     <groupId>org.onap.aai.aai-common</groupId>
                     <artifactId>aai-schema</artifactId>
-                    <version>1.2.0</version>
+                    <version>1.2.1-SNAPSHOT</version>
                 </dependency>
 		<dependency>
 	 	 	<groupId>org.modelmapper</groupId>
