--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,8 @@
     <org.apache.maven.user-settings></org.apache.maven.user-settings>
     <!-- this is used for Chef mso-code cookbook -->
     <swm.version>2.19.3-1</swm.version>
-    <!-- <openstack.version>1.2.0-SNAPSHOT</openstack.version> -->
-	<openstack.version>1.2.0</openstack.version>
+    <openstack.version>1.2.0-SNAPSHOT</openstack.version>
+    <!-- <openstack.version>1.2.0</openstack.version> -->
     <nexusproxy>https://nexus.onap.org</nexusproxy>
     <maven.build.timestamp.format>yyyyMMdd'T'HHmm</maven.build.timestamp.format>
     <resteasy.version>3.0.19.Final</resteasy.version>
