Dependency version updates for Beijing
Update so/libs version to 1.2.1

Update aai-common version to 1.2.1

Update sdc-distribution-client version to 1.3.0

Update sdc-tosca version to 1.3.3

Change-Id: I6c8f1c5476efc4dc866bf765c265736ab70c12c7
Issue-ID: SO-536
Signed-off-by: Rob Daugherty <rd472p@att.com>

--- a/adapters/mso-vnf-adapter/pom.xml
+++ b/adapters/mso-vnf-adapter/pom.xml
@@ -147,7 +147,7 @@
 		<dependency>
 			<groupId>org.onap.so</groupId>
 			<artifactId>aria-client</artifactId>
-			<version>1.2.0</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jmockit</groupId>
