--- a/asdc-controller/pom.xml
+++ b/asdc-controller/pom.xml
@@ -59,19 +59,7 @@
 				<version>3.1.0</version>
 				<scope>test</scope>
 		</dependency>
-		
-	<!-- 	<dependency>
-  				<groupId>org.openecomp.sdc.sdc-distribution-client</groupId>
-  				<artifactId>sdc-distribution-client</artifactId>
-  				<version>1.1.16</version>
-  				<exclusions>
-       		 		<exclusion>  
-	         	 		<groupId>org.slf4j</groupId>
-	         	 		<artifactId>slf4j-log4j12</artifactId>
-       		 		</exclusion>
-    	  		</exclusions> 
-		</dependency>  -->
-		
+
 		<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
@@ -85,9 +73,9 @@
 		</dependency>
 		
 	 	<dependency>
-  			<groupId>org.openecomp.sdc.sdc-distribution-client</groupId>
+  			<groupId>org.onap.sdc.sdc-distribution-client</groupId>
   			<artifactId>sdc-distribution-client</artifactId>
- 			 <version>1.2.2</version>
+ 			 <version>1.3.0</version>
  			<exclusions>
        		 	<exclusion>  
 	         	 	<groupId>org.slf4j</groupId>
@@ -96,27 +84,11 @@
     	  </exclusions>
 		</dependency>
 
-
 		<dependency>
-			<!-- This version should be upgraded in Beijing -->
-  			<groupId>org.openecomp.sdc.sdc-tosca</groupId>
+  			<groupId>org.onap.sdc.sdc-tosca</groupId>
   			<artifactId>sdc-tosca</artifactId>
-  			<version>1.2.3</version>
-			<exclusions>
-				<exclusion>  
-					<groupId>org.openecomp.sdc.jtosca</groupId>
-					<artifactId>jtosca</artifactId>
-  					<!-- <version>1.2.2-SNAPSHOT</version> -->
-				</exclusion>
-			</exclusions>
+  			<version>1.3.3</version>
 		</dependency> 
-		<dependency>  
-			<!-- When the sdc-tosca version is upgraded from 1.2.3,
-			     this dependency should be removed entirely -->
-			<groupId>org.openecomp.sdc.jtosca</groupId>
-			<artifactId>jtosca</artifactId>
-  			<version>1.2.1</version>
-		</dependency>
 
 		<dependency>
 		    <groupId>org.apache.httpcomponents</groupId>
