--- a/mso-api-handlers/mso-api-handler-infra/pom.xml
+++ b/mso-api-handlers/mso-api-handler-infra/pom.xml
@@ -238,15 +238,15 @@
 		    <scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.openecomp.sdc.sdc-distribution-client</groupId>
+			<groupId>org.onap.sdc.sdc-distribution-client</groupId>
 			<artifactId>sdc-distribution-client</artifactId>
-			<version>1.2.0-SNAPSHOT</version>
+			<version>1.3.0</version>
 			<scope>test</scope>
 		</dependency>
                 <dependency>
-                        <groupId>org.openecomp.sdc.sdc-distribution-client</groupId>
+                        <groupId>org.onap.sdc.sdc-distribution-client</groupId>
                         <artifactId>sdc-distribution-client</artifactId>
-                        <version>1.2.3</version>
+                        <version>1.3.0</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
