--- a/packages/arquillian-unit-tests/pom.xml
+++ b/packages/arquillian-unit-tests/pom.xml
@@ -205,9 +205,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.openecomp.sdc.sdc-distribution-client</groupId>
+      <groupId>org.onap.sdc.sdc-distribution-client</groupId>
       <artifactId>sdc-distribution-client</artifactId>
-      <version>1.2.2</version>
+      <version>1.3.0</version>
       <scope>test</scope>
     </dependency>
 
@@ -281,6 +281,7 @@
       <plugin>
         <groupId>org.codehaus.groovy.maven</groupId>
         <artifactId>gmaven-plugin</artifactId>
+        <version>1.0</version>
         <executions>
           <execution>
             <phase>generate-resources</phase>
