--- a/packages/docker/pom.xml
+++ b/packages/docker/pom.xml
@@ -32,6 +32,7 @@
 		    <plugin>
                 <groupId>org.codehaus.groovy.maven</groupId>
                 <artifactId>gmaven-plugin</artifactId>
+                <version>1.0</version>
                 <executions>
                   <execution>
                     <phase>validate</phase>
