--- a/common/pom.xml
+++ b/common/pom.xml
@@ -151,6 +151,22 @@
 			<version>22.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.shazam</groupId>
+			<artifactId>shazamcrest</artifactId>
+			<version>0.11</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-lang3</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
 	      <groupId>log4j</groupId>
 	      <artifactId>log4j</artifactId>
 	      <version>1.2.17</version>
