ControllerType update for CM flows
Change-Id: I42c60ba45baaf29fa5fe54a8bb7ffc0aab5622c7
Signed-off-by: Elena Kuleshov <ek1439@att.com>
Issue-ID: SO-526

--- a/bpmn/MSOInfrastructureBPMN/src/test/resources/mso.bpmn.urn.properties
+++ b/bpmn/MSOInfrastructureBPMN/src/test/resources/mso.bpmn.urn.properties
@@ -106,6 +106,7 @@ log.debug.CreateGenericALaCarteServiceInstance=true
 log.debug.DecomposeService=true
 log.debug.DoCreateServiceInstance=true
 log.debug.DoDeleteServiceInstance=true
+log.debug.VnfInPlaceUpdate=true
 
 policy.client.auth=Basic bTAzNzQzOnBvbGljeVIwY2sk
 policy.auth=Basic dGVzdHBkcDphbHBoYTEyMw==
@@ -117,9 +118,10 @@ appc.topic.read=APPC-CL-FUSION-LCM-RESPONSE
 appc.topic.read.timeout=100
 appc.client.response.timeout=300
 appc.topic.write=APPC-CL-FUSION-LCM
-appc.pool.members=localhost:28090
+appc.poolMembers=localhost:28090
 appc.client.key=iaEMAfjsVsZnraBP
 appc.client.secret=wcivUjsjXzmGFBfxMmyJu9dz
+appc.service=ueb
 
 sdnc.si.sv.types=PORT-MIRROR,PPROBES
 mso.bpmn.optimisticlockingexception.retrycount=3
