--- a/adapters/mso-network-adapter/pom.xml
+++ b/adapters/mso-network-adapter/pom.xml
@@ -119,6 +119,13 @@
 		    <version>3.1.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>javax.ws.rs</groupId>
+		    <artifactId>javax.ws.rs-api</artifactId>
+		    <version>2.1</version>
+		    <scope>test</scope>
+		</dependency>
+
 
 	<!-- added for unit testing -->
 
