Remove appc.service=ueb in infra bpmn
Change-Id: I39809ed7365b96bc225cb290ff0e6cca8cc80594
Issue-ID: SO-546
Signed-off-by: Arthur Martella <amartell@research.att.com>

--- a/bpmn/MSOInfrastructureBPMN/src/test/resources/mso.bpmn.urn.properties
+++ b/bpmn/MSOInfrastructureBPMN/src/test/resources/mso.bpmn.urn.properties
@@ -121,7 +121,7 @@ appc.topic.write=APPC-CL-FUSION-LCM
 appc.poolMembers=localhost:28090
 appc.client.key=iaEMAfjsVsZnraBP
 appc.client.secret=wcivUjsjXzmGFBfxMmyJu9dz
-appc.service=ueb
+# appc.service=ueb
 
 sdnc.si.sv.types=PORT-MIRROR,PPROBES
 mso.bpmn.optimisticlockingexception.retrycount=3
