--- a/adapters/mso-adapter-utils/pom.xml
+++ b/adapters/mso-adapter-utils/pom.xml
@@ -112,7 +112,12 @@
 			<artifactId>snakeyaml</artifactId>
 			<version>1.15</version>
 		</dependency>
-	<dependency>
+		<dependency>
+                        <groupId>org.onap.so</groupId>
+                        <artifactId>aria-client</artifactId>
+	                <version>1.2.0</version>
+		</dependency>
+	        <dependency>
 			<groupId>com.shazam</groupId>
 			<artifactId>shazamcrest</artifactId>
 			<version>0.11</version>
