Update docker tag convention
Update docker tagging convention to use:
v0.17.0-SNAPSHOT-YYYYMMDDTHHMMSSZ (for dev images)
v0.17.0-STAGING-YYYYMMDDTHHMMSSZ (for staging images)

Change-Id: I34a906249339be7ebd73cba90aa94493182cb9c2
Issue-ID: CIMAN-132
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
     <swm.version>2.19.3-1</swm.version>
 	<openstack.version>1.2.1</openstack.version>
     <nexusproxy>https://nexus.onap.org</nexusproxy>
-    <maven.build.timestamp.format>yyyyMMdd'T'HHmm</maven.build.timestamp.format>
+    <maven.build.timestamp.format>yyyyMMdd'T'HHmmss'Z'</maven.build.timestamp.format>
     <resteasy.version>3.0.19.Final</resteasy.version>
   </properties>
   <distributionManagement>
