--- a/packages/docker/pom.xml
+++ b/packages/docker/pom.xml
@@ -24,6 +24,8 @@
 		<mso.chef.git.url.suffix.chef.repo>so/chef-repo</mso.chef.git.url.suffix.chef.repo>
 		<mso.chef.git.url.suffix.chef.config>so/so-config</mso.chef.git.url.suffix.chef.config>
 		<mso.project.version>${project.version}</mso.project.version>
+		<docker.pull.registry>nexus3.onap.org:10001</docker.pull.registry>
+		<docker.push.registry>nexus3.onap.org:10003</docker.push.registry>
 	</properties>
 
 	<build>
@@ -100,7 +102,9 @@
 			<plugin>
 				<groupId>io.fabric8</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
-				<version>0.16.5</version>
+				<version>0.19.1</version>
+				<pullRegistry>${docker.pull.registry}</pullRegistry>
+				<pushRegistry>${docker.push.registry}</pushRegistry>
 
 				<configuration>
 					<verbose>true</verbose>
