Add git ignores for Mac OS
Change-Id: I21448590c09f8a80033f3ecc3d16ed6534ec01e0
Issue-ID: SO-566
Signed-off-by: Denes Nemeth <denes.nemeth@nokia.com>

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ target
 **/debug-logs/
 *.log
 *.tmp
+.DS_Store
 packages/root-pack-extras/config-resources/mariadb/db-sql-scripts/main-schemas/MySQL-Catalog-schema.sql
 packages/root-pack-extras/config-resources/mariadb/db-sql-scripts/main-schemas/MySQL-Requests-schema.sql
 /bin/
