--- a/bpmn/MSOInfrastructureBPMN/src/main/resources/dmaap.properties
+++ b/bpmn/MSOInfrastructureBPMN/src/main/resources/dmaap.properties
@@ -1,7 +1,9 @@
-dmaapHost=HOSTNAME
-dmaapPort=3905
-dmaapProtocol=http
-dmaapUriPathPrefix = events
+host=HOSTNAME
+port=3905
+protocol=http
+uriPathPrefix = events
 eventReadyTopicName=pnfEventReady
 consumerId=consumerId
 consumerGroup=group
+clientThreadInitialDelayInSeconds=1
+clientThreadDelayInSeconds=5
