Added canceling subsription to pnf-pnp workflow
Change-Id: I0997943668b29a89565bbf83a40462a690d4a414
Issue-ID: SO-506
Signed-off-by: biniek <lukasz.biniek@nokia.com>

--- a/bpmn/MSOInfrastructureBPMN/src/main/webapp/WEB-INF/web.xml
+++ b/bpmn/MSOInfrastructureBPMN/src/main/webapp/WEB-INF/web.xml
@@ -50,6 +50,8 @@
   </context-param>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  <listener>
     <listener-class>org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap</listener-class>
   </listener>
 
