Create VF Module Error
There are multiple issues here.

1) The LCM healthcheck and config-scale-out should be skipped
   for base VF module creation. They only apply when adding new
   modules to a VNF.

2) APP-C gave us an API where the controller type is configured
   in their client object, which is NOT what we wanted.  As a
   result, we have to keep a client object for each controller
   type.  Our implementation did not do this.

3) Need to support the APP-C client configuration properties
   for specifying the SDN-C topic names.  I'm refactoring the
   APP-C client urn mapping names to make it clear that they
   are for configuring the APP-C *client* and not necessarily
   for APP-C itself.

Change-Id: I588f3b98b4ee44ba53b4931f9f1a7938ee70bebf
Issue-ID: SO-577
Signed-off-by: Rob Daugherty <rd472p@att.com>

--- a/bpmn/MSOInfrastructureBPMN/src/test/resources/mso.bpmn.urn.properties
+++ b/bpmn/MSOInfrastructureBPMN/src/test/resources/mso.bpmn.urn.properties
@@ -114,14 +114,16 @@ policy.environment=TEST
 policy.endpoint=http://localhost:28090/pdp/api/
 policy.default.disposition=Skip
 
-appc.topic.read=APPC-CL-FUSION-LCM-RESPONSE
-appc.topic.read.timeout=100
+appc.client.topic.read=APPC-CL-FUSION-LCM-RESPONSE
+appc.client.topic.write=APPC-CL-FUSION-LCM
+appc.client.topic.sdnc.read=SDNC-LCM-READ
+appc.client.topic.sdnc.write=SDNC-LCM-WRITE
+appc.client.topic.read.timeout=100
 appc.client.response.timeout=300
-appc.topic.write=APPC-CL-FUSION-LCM
-appc.poolMembers=localhost:28090
+appc.client.poolMembers=localhost:28090
 appc.client.key=iaEMAfjsVsZnraBP
 appc.client.secret=wcivUjsjXzmGFBfxMmyJu9dz
-#appc.service=ueb
+#appc.client.service=ueb
 
 sdnc.si.sv.types=PORT-MIRROR,PPROBES
 mso.bpmn.optimisticlockingexception.retrycount=3
