--- a/bpmn/MSOCommonBPMN/src/test/resources/mso.bpmn.urn.properties
+++ b/bpmn/MSOCommonBPMN/src/test/resources/mso.bpmn.urn.properties
@@ -33,14 +33,16 @@ policy.client.auth=Basic bTAzNzQzOnBvbGljeVIwY2sk
 policy.auth=Basic dGVzdHBkcDphbHBoYTEyMw==
 policy.environment=TEST
 
-appc.topic.read=APPC-TEST-AMDOCS2
-appc.topic.write=APPC-TEST-AMDOCS1-DEV3
-appc.topic.read.timeout=120000
+appc.client.topic.read=APPC-TEST-AMDOCS2
+appc.client.topic.write=APPC-TEST-AMDOCS1-DEV3
+appc.client.topic.sdnc.read=SDNC-LCM-READ
+appc.client.topic.sdnc.write=SDNC-LCM-WRITE
+appc.client.topic.read.timeout=120000
 appc.client.response.timeout=120000
-appc.service=ueb
-appc.poolMembers=uebsb93kcdc.it.att.com:3904,uebsb92kcdc.it.att.com:3904,uebsb91kcdc.it.att.com:3904
+appc.client.poolMembers=uebsb93kcdc.it.att.com:3904,uebsb92kcdc.it.att.com:3904,uebsb91kcdc.it.att.com:3904
 appc.client.key=iaEMAfjsVsZnraBP
 appc.client.secret=wcivUjsjXzmGFBfxMmyJu9dz
+appc.client.service=ueb
 
 mso.adapters.sdnc.endpoint=http://localhost:28090/SDNCAdapter
 mso.adapters.sdnc.rest.endpoint=http://localhost:28090/SDNCAdapter/v1/sdnc
