Add enforcer.skip to pom.xml
To prevent appc snapshot problem

Also change appc version to SNAPSHOT

Change-Id: Ifce05b7f44ccc70a2d654526d67da873dd325dcd
Issue-ID: SO-605
Signed-off-by: Arthur Martella <am153x@att.com>

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
     <nexusproxy>https://nexus.onap.org</nexusproxy>
     <maven.build.timestamp.format>yyyyMMdd'T'HHmmss'Z'</maven.build.timestamp.format>
     <resteasy.version>3.0.19.Final</resteasy.version>
+    <enforcer.skip>true</enforcer.skip>
   </properties>
   <distributionManagement>
     <repository>
