--- a/common/pom.xml
+++ b/common/pom.xml
@@ -123,12 +123,12 @@
                 <dependency>
                     <groupId>org.onap.appc.client</groupId>
                     <artifactId>client-kit</artifactId>
-                    <version>1.3.0</version>
+                    <version>1.3.0-SNAPSHOT</version>
                 </dependency>
                 <dependency>
                     <groupId>org.onap.appc.client</groupId>
                     <artifactId>client-lib</artifactId>
-                    <version>1.3.0</version>
+                    <version>1.3.0-SNAPSHOT</version>
                 </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
