Rest Interface for SO monitoring
This draft is for SO Monitoring team to integrate UI

Change-Id: Ie1b71f4be071c5e9f9bf2a4174a24d3a18b68754
Issue-ID: SO-789
Signed-off-by: waqas.ikram <waqas.ikram@ericsson.com>

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<module>asdc-controller</module>
 		<module>bpmn</module>
 		<module>cloudify-client</module>
+        <module>so-monitoring</module>
 		<module>packages</module>
 	</modules>
 	<properties>
