SO Monitoring UI
Change-Id: I6f1c13119d18b8731a02c8559bb1484ec84d6041
Issue-ID: SO-726
Signed-off-by: waqas.ikram <waqas.ikram@ericsson.com>
Signed-off-by: Ronan Kenny <ronan.kenny@ericsson.com>

--- a/so-monitoring/pom.xml
+++ b/so-monitoring/pom.xml
@@ -59,6 +59,7 @@
     </build>
 
     <modules>
+        <module>so-monitoring-ui</module>
         <module>so-monitoring-handler</module>
         <module>so-monitoring-service</module>
     </modules>
