--- a/so-monitoring/so-monitoring-service/src/test/resources/application-test.yaml
+++ b/so-monitoring/so-monitoring-service/src/test/resources/application-test.yaml
@@ -3,6 +3,10 @@ server:
   tomcat:
     max-threads: 50
 ssl-enable: false
+spring:
+  datasource:
+    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;
+    driver-class-name: org.h2.Driver
 camunda:
   rest:
     api:
