Use managed guava version
Use centrally managed guava version specified in
oparent.  Includes upgrade to oparent 1.2.0.

This change was submitted by script and may include
additional whitespace or formatting changes.

Change-Id: I4da3f582e347da62f9d6fe8d6f20c147d493b8a0
Issue-ID: INT-619
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/adapters/mso-openstack-adapters/pom.xml
+++ b/adapters/mso-openstack-adapters/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.onap.so</groupId>
@@ -13,7 +13,7 @@
 
 	<build>
 		<finalName>${project.artifactId}-${project.version}</finalName>
-		
+
 		<plugins>			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -62,7 +62,7 @@
 							<keep>true</keep>
 						</configuration>
 					</execution>
-					
+
 					<execution>
 						<id>generate-vnf-async-stubs</id>
 						<phase>process-classes</phase>
@@ -127,8 +127,8 @@
 				</executions>
 			</plugin>
 		</plugins>		
-		
-		
+
+
 		<pluginManagement>
 			<plugins>
 				<!--This plugin's configuration is used to store Eclipse m2e settings
@@ -156,7 +156,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<ignore/>
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
@@ -226,11 +226,11 @@
     		<artifactId>janino</artifactId>
     		<version>2.5.15</version>
 		</dependency>
-        
+
 	<!-- end added for spring boot support -->	
-	
-	
-	
+
+
+
 	<!-- added for unit testing -->		
 		<dependency>
 			<groupId>org.onap.so.adapters</groupId>
