--- a/bpmn/MSORESTClient/pom.xml
+++ b/bpmn/MSORESTClient/pom.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.onap.so</groupId>
         <artifactId>bpmn</artifactId>
 		<version>1.3.0-SNAPSHOT</version>
 	</parent>
-	
+
 	<artifactId>MSORESTClient</artifactId>
-	
+
 	<packaging>jar</packaging>
-	
+
 	<name>MSO REST Client API</name>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -30,8 +29,8 @@
 		<build>
 		<finalName>MSORESTClient</finalName>
 		<plugins>
-			
+
 		</plugins>
-		
+
 	</build>
 </project>
