--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.onap.oparent</groupId>
 		<artifactId>oparent</artifactId>
-		<version>1.1.0</version>
-		<relativePath />
+		<version>1.2.0</version>
+		<relativePath/>
 	</parent>
 	<groupId>org.onap.so</groupId>
 	<artifactId>so</artifactId>
@@ -44,7 +44,7 @@
 		<sonar.projectVersion>${project.version}</sonar.projectVersion>
 		<sonar.cpd.exclusions>**/*</sonar.cpd.exclusions>
 		<jacoco.version>0.7.5.201505241946</jacoco.version>
-		<org.apache.maven.user-settings></org.apache.maven.user-settings>
+		<org.apache.maven.user-settings/>
 		<openstack.version>1.2.2</openstack.version>
 		<maven.build.timestamp.format>yyyyMMdd'T'HHmm</maven.build.timestamp.format>
 		<springboot.version>1.5.13.RELEASE</springboot.version>	
@@ -233,7 +233,7 @@
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.8</version> <!-- This version supports the "deployAtEnd" parameter -->
 				<configuration>
-					<skip />
+					<skip/>
 				</configuration>
 			</plugin>
 
@@ -799,7 +799,7 @@
 				</property>
 			</activation>
 			<properties>
-				<originalClassifier></originalClassifier>
+				<originalClassifier/>
 			</properties>
 		</profile>
 	</profiles>
