Add Java OofClient
Issue-ID: SO-745
Change-Id: I8c49c573b18d4b7a9e93f7627dc3d1a1e6e71432
Signed-off-by: Marcus G K Williams <marcus.williams@intel.com>

--- a/bpmn/so-bpmn-tasks/src/test/resources/application-test.yaml
+++ b/bpmn/so-bpmn-tasks/src/test/resources/application-test.yaml
@@ -190,6 +190,12 @@ sniro:
     headers.patchVersion: 1
     headers.minorVersion: 1
     headers.latestVersion: 2
+oof:
+  timeout: PT30M
+  host: http://localhost:${wiremock.server.port}
+  uri.v1: /api/oof/v1/placement
+  uri.v2: /api/oof/v2/placement
+  headers.auth: Basic dGVzdDp0ZXN0cHdk
 spring:
   datasource:
     url: jdbc:mariadb://localhost:3307/camundabpmn
