--- a/adapters/mso-requests-db-adapter/src/main/resources/application-local.yaml
+++ b/adapters/mso-requests-db-adapter/src/main/resources/application-local.yaml
@@ -15,8 +15,8 @@ mso:
 spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/requestdb
-    username: mso
-    password: mso123
+    username: catalog
+    password: catalog123
     driver-class-name: org.mariadb.jdbc.Driver
     initialize: true
     initialization-mode: never
