--- a/common/pom.xml
+++ b/common/pom.xml
@@ -102,16 +102,7 @@
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-rs-client</artifactId>
 			<version>${cxf.version}</version>
-		</dependency>
-		<dependency>
-    		<groupId>org.apache.cxf</groupId>
-    		<artifactId>cxf-rt-bindings-soap</artifactId>
-  			<version>${cxf.version}</version>
-		</dependency>
-		<dependency>
-    		<groupId>org.apache.cxf</groupId>
-    		<artifactId>cxf-rt-transports-http</artifactId>
-    		<version>${cxf.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.shazam</groupId>
@@ -146,11 +137,6 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>janino</groupId>
-			<artifactId>janino</artifactId>
-			<version>2.5.15</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
