sparate beans and repositories
Seperate out Beans and repositories for RequestDB

Change-Id: I67d6597d580e9828b6bb8faafaea7e09cc6467c0
Issue-ID: SO-999
Signed-off-by: Benjamin, Max (mb388a) <mb388a@us.att.com>

--- a/adapters/mso-requests-db-adapter/pom.xml
+++ b/adapters/mso-requests-db-adapter/pom.xml
@@ -67,6 +67,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.onap.so</groupId>
+			<artifactId>mso-requests-db-repositories</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<optional>true</optional>
