--- a/asdc-controller/pom.xml
+++ b/asdc-controller/pom.xml
@@ -221,11 +221,11 @@
 			<groupId>org.onap.so</groupId>
 			<artifactId>mso-requests-db</artifactId>
 			<version>${project.version}</version>
-		</dependency>
+		</dependency>		
 		<dependency>
-    		<groupId>janino</groupId>
-    		<artifactId>janino</artifactId>
-    		<version>2.5.15</version>
+			<groupId>org.onap.so</groupId>
+			<artifactId>mso-requests-db-repositories</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.antlr</groupId>
