sparate beans and repositories
Seperate out Beans and repositories for RequestDB

Change-Id: I67d6597d580e9828b6bb8faafaea7e09cc6467c0
Issue-ID: SO-999
Signed-off-by: Benjamin, Max (mb388a) <mb388a@us.att.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 target
-.settings
-.classpath
-.project
-.buildpath
-.factorypath
+**/.settings
+**/.classpath
+**/.project
+**/.buildpath
+**/.factorypath
+**/.springBeans
 .idea
 .checkstyle
 .DS_Store
